<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_error"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="166dp"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="123dp"
            android:layout_marginLeft="123dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="122dp"
            android:layout_marginRight="122dp"
            android:gravity="center"
            android:text="SkipTheService"
            android:textColor="#303030"
            android:textSize="20sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="146dp"
            android:layout_marginLeft="146dp"
            android:layout_marginEnd="158dp"
            android:layout_marginRight="158dp"
            android:layout_marginBottom="180dp"
            android:background="@color/design_default_color_error"
            android:onClick="registerOnClick"
            android:text="Register"
            android:textColor="@color/black"
            app:backgroundTint="@color/design_default_color_error" />

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="242dp"
            android:layout_height="62dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="85dp"
            android:layout_marginLeft="85dp"
            android:layout_marginEnd="84dp"
            android:layout_marginRight="84dp"
            android:layout_marginBottom="240dp"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/password"
            android:layout_width="242dp"
            android:layout_height="62dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="85dp"
            android:layout_marginLeft="85dp"
            android:layout_marginEnd="84dp"
            android:layout_marginRight="84dp"
            android:layout_marginBottom="300dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/emailAddress"
            android:layout_width="242dp"
            android:layout_height="62dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="85dp"
            android:layout_marginLeft="85dp"
            android:layout_marginEnd="84dp"
            android:layout_marginRight="84dp"
            android:layout_marginBottom="360dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="Email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/postalAddress"
            android:layout_width="242dp"
            android:layout_height="62dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="85dp"
            android:layout_marginLeft="85dp"
            android:layout_marginEnd="84dp"
            android:layout_marginRight="84dp"
            android:layout_marginBottom="420dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="Address, Postal code"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/newBusinessName"
            android:layout_width="240dp"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="84dp"
            android:layout_marginLeft="84dp"
            android:layout_marginEnd="87dp"
            android:layout_marginRight="87dp"
            android:layout_marginBottom="480dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="Username"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/containerTitle"
            android:layout_width="320dp"
            android:layout_height="35dp"
            android:gravity="center"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="82dp"
            android:layout_marginLeft="82dp"
            android:layout_marginEnd="82dp"
            android:layout_marginRight="82dp"
            android:layout_marginBottom="570dp"
            android:autofillHints=""
            android:ems="10"
            android:text="Business Registration"
            android:textSize="25sp"
            android:textStyle="bold" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>